[metadata]
name = kaf-act
version = 0.1.0
author = kolmogorovArnoldFourierNetwork
author_email = 1957804226@qq.com
description = KAF Activation with Random Fourier Features
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kolmogorovArnoldFourierNetwork/kaf_act
license = MIT
keywords = activation-function, neural-network, deep-learning, pytorch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    torch>=1.10.0

[options.extras_require]
test =
    pytest>=6.0.0

[options.packages.find]
where = src